k3s/apps/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: nextcloud
  template:
    metadata:
      labels:
        component: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: datadir
              mountPath: /var/www/html
              subPath: html
            - name: datadir
              mountPath: /data
              subPath: data
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: nextcloud-datadir
